NEXT-19548 - Fix misaligned columns on vertical tax

--- a/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item.scss
@@ -70,6 +70,7 @@
 }
 
 .cart-item-total-price {
+    margin-left: auto;
     order: 5;
 }
 
